--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,17 +26,17 @@ jobs:
         GOOS=windows GOARCH=amd64 go build -o build/windows/sbf.exe main.go
         GOOS=darwin GOARCH=amd64 go build -o build/macos/sbf main.go
     - name: Publish for Linux
-      if: startsWith(github.ref, 'tags/v')
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: build/linux/sbf
     - name: Publish for Windows
-      if: startsWith(github.ref, 'tags/v')
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: build/windows/sbf.exe
     - name: Publish for macOS
-      if: startsWith(github.ref, 'tags/v')
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: build/macos/sbf
