--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,14 +30,19 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: build/linux/sbf
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
     - name: Publish for Windows
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: build/windows/sbf.exe
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
     - name: Publish for macOS
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: build/macos/sbf
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
