--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,8 +33,8 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       run: |
         (cd build/linux && tar cfvz ../sbgraph-linux-amd64.tar.gz sbgraph)
-        (cd build/windows && tar cfvz ../sbf-windows-amd64.tar.gz sbgraph.exe)
-        (cd build/macos && tar cfvz ../sbf-darwin-amd64.tar.gz sbgraph)
+        (cd build/windows && tar cfvz ../sbgraph-windows-amd64.tar.gz sbgraph.exe)
+        (cd build/macos && tar cfvz ../sbgraph-darwin-amd64.tar.gz sbgraph)
 
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
