--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,14 +14,14 @@ jobs:
 
     steps:
 
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.13
+        go-version: 1.22
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Build
       run: |
