--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,11 @@ on:
 jobs:
 
   build:
+    permissions:
+      id-token: write
+      contents: read
+      attestations: write
+
     name: Build
     runs-on: ubuntu-latest
 
@@ -39,6 +44,12 @@ jobs:
         (cd build/windows && tar cfvz ../sbgraph-windows-amd64.tar.gz sbgraph.exe)
         (cd build/macos-amd64 && tar cfvz ../sbgraph-darwin-amd64.tar.gz sbgraph)
         (cd build/macos-arm64 && tar cfvz ../sbgraph-darwin-arm64.tar.gz sbgraph)
+
+    - name: Generate artifact attestations
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: 'build/*.tar.gz'
 
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
